--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -11,10 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Ser     Category             SubCategory Unnamed: 3\n",
+      "0   1  Agriculture                     NaN        NaN\n",
+      "1   2          NaN  Agricultural Equipment        NaN\n",
+      "2   3          NaN                     NaN        NaN\n",
+      "3   4          NaN                     NaN        NaN\n",
+      "4   5          NaN                     NaN        NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.read_excel('document.xlsx')\n",
+    "\n",
+    "print(df1.head())\n"
+   ]
   }
  ],
  "metadata": {
