--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -34,6 +34,65 @@
     "\n",
     "print(df1.head())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Then lets cut it in half"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First half (df2a):\n",
+      "  Ser     Category             SubCategory Unnamed: 3\n",
+      "0   1  Agriculture                     NaN        NaN\n",
+      "1   2          NaN  Agricultural Equipment        NaN\n",
+      "2   3          NaN                     NaN        NaN\n",
+      "3   4          NaN                     NaN        NaN\n",
+      "4   5          NaN                     NaN        NaN\n",
+      "\n",
+      "Second half (df2b):\n",
+      "                        Ser Category SubCategory         Unnamed: 3\n",
+      "0            SubSubCategory      NaN         NaN  SubSubSubCategory\n",
+      "1                       NaN      NaN         NaN                NaN\n",
+      "2                       NaN      NaN         NaN                NaN\n",
+      "3  Agricultural Greenhouses      NaN         NaN                NaN\n",
+      "4     Aquaculture Equipment      NaN         NaN                NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "midpoint = len(df1) // 2\n",
+    "\n",
+    "df2a = df1.iloc[:midpoint].reset_index(drop=True)\n",
+    "df2b = df1.iloc[midpoint:].reset_index(drop=True)\n",
+    "\n",
+    "print(\"First half (df2a):\"); print(df2a.head())\n",
+    "\n",
+    "print(\"\\nSecond half (df2b):\"); print(df2b.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    df2b doesn't look that good, lets fix that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
