--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              SubSubCategory            SubSubSubCategory\n",
+      "1                        NaN                          NaN\n",
+      "2                        NaN                          NaN\n",
+      "3   Agricultural Greenhouses                          NaN\n",
+      "4      Aquaculture Equipment                          NaN\n",
+      "5                        NaN             Aquaculture Trap\n",
+      "6                        NaN                Fishing Float\n",
+      "7                        NaN                  Fishing Net\n",
+      "8                        NaN                 Fishing Rope\n",
+      "9                        NaN  Other Aquaculture Equipment\n",
+      "10                   Ear Tag                          NaN\n",
+      "11                       NaN                          NaN\n",
+      "12                      Peat                          NaN\n",
+      "13                       NaN                          NaN\n",
+      "14                       NaN                          NaN\n",
+      "15                       NaN                          NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2b = df2b.drop(['Category', 'SubCategory'], axis=1) # drop na collumns\n",
+    "df2b = df2b.iloc[1:] # remove unneccesary row with innacurate names\n",
+    "# df2a.rename({\"Ser\": \"SubSubCategory\", \"Unnamed: 3\": \"SubSubSubCategory\"}, axis='columns')\n",
+    "df2b.columns = ['SubSubCategory', 'SubSubSubCategory']\n",
+    "\n",
+    "print(df2b.head(15))"
+   ]
   }
  ],
  "metadata": {
