--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -123,6 +123,52 @@
     "\n",
     "print(df2b.head(15))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    And while we're at it lets clean up df2a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ser     Category                 SubCategory\n",
+      "0    1  Agriculture                         NaN\n",
+      "1    2          NaN      Agricultural Equipment\n",
+      "2    3          NaN                         NaN\n",
+      "3    4          NaN                         NaN\n",
+      "4    5          NaN                         NaN\n",
+      "5    6          NaN                         NaN\n",
+      "6    7          NaN                         NaN\n",
+      "7    8          NaN                         NaN\n",
+      "8    9          NaN                         NaN\n",
+      "9   10          NaN                         NaN\n",
+      "10  11          NaN  Agricultural Growing Media\n",
+      "11  12          NaN                         NaN\n",
+      "12  13          NaN  Agricultural Product Stock\n",
+      "13  14          NaN          Agricultural Waste\n",
+      "14  15          NaN              Animal Extract\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2a = df2a.drop(['Unnamed: 3'], axis=1) # drop\n",
+    "\n",
+    "print(df2a.head(15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
