--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -168,7 +168,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "    Now lets give ourselves something to merge by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              SubSubCategory            SubSubSubCategory  Ser\n",
+      "1                        NaN                          NaN    1\n",
+      "2                        NaN                          NaN    2\n",
+      "3   Agricultural Greenhouses                          NaN    3\n",
+      "4      Aquaculture Equipment                          NaN    4\n",
+      "5                        NaN             Aquaculture Trap    5\n",
+      "6                        NaN                Fishing Float    6\n",
+      "7                        NaN                  Fishing Net    7\n",
+      "8                        NaN                 Fishing Rope    8\n",
+      "9                        NaN  Other Aquaculture Equipment    9\n",
+      "10                   Ear Tag                          NaN   10\n",
+      "11                       NaN                          NaN   11\n",
+      "12                      Peat                          NaN   12\n",
+      "13                       NaN                          NaN   13\n",
+      "14                       NaN                          NaN   14\n",
+      "15                       NaN                          NaN   15\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2b['Ser'] = range(1, len(df2b) + 1)\n",
+    "\n",
+    "print(df2b.head(15))"
+   ]
   }
  ],
  "metadata": {
