--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -205,6 +205,59 @@
     "\n",
     "print(df2b.head(15))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    My favorite part was when they said 'ITS MERG TIME' & merged all over the place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser     Category             SubCategory            SubSubCategory  \\\n",
+      "0        1  Agriculture                     NaN                       NaN   \n",
+      "1        2          NaN  Agricultural Equipment                       NaN   \n",
+      "2        3          NaN                     NaN  Agricultural Greenhouses   \n",
+      "3        4          NaN                     NaN     Aquaculture Equipment   \n",
+      "4        5          NaN                     NaN                       NaN   \n",
+      "...    ...          ...                     ...                       ...   \n",
+      "4591  4592          NaN                     NaN            Truck Steering   \n",
+      "4592  4593          NaN                     NaN          Truck Suspension   \n",
+      "4593  4594          NaN                     NaN                Truck Tire   \n",
+      "4594  4595          NaN                     NaN        Truck Transmission   \n",
+      "4595  4596          NaN                     NaN               Truck Wheel   \n",
+      "\n",
+      "     SubSubSubCategory  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2                  NaN  \n",
+      "3                  NaN  \n",
+      "4     Aquaculture Trap  \n",
+      "...                ...  \n",
+      "4591               NaN  \n",
+      "4592               NaN  \n",
+      "4593               NaN  \n",
+      "4594               NaN  \n",
+      "4595               NaN  \n",
+      "\n",
+      "[4596 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3 = pd.merge(df2a, df2b, on='Ser', suffixes=('_a', '_b'))\n",
+    "\n",
+    "# print(df3.head(15))\n",
+    "print(df3)"
+   ]
   }
  ],
  "metadata": {
