--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -258,6 +258,63 @@
     "# print(df3.head(15))\n",
     "print(df3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    We can reuse some code from the 4th attempt of the pure python method to implement a better tree from here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser        Category             SubCategory            SubSubCategory  \\\n",
+      "0        1     Agriculture                     NaN                       NaN   \n",
+      "1        2     Agriculture  Agricultural Equipment                       NaN   \n",
+      "2        3     Agriculture  Agricultural Equipment  Agricultural Greenhouses   \n",
+      "3        4     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "4        5     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "...    ...             ...                     ...                       ...   \n",
+      "4591  4592  Transportation             Truck Parts            Truck Steering   \n",
+      "4592  4593  Transportation             Truck Parts          Truck Suspension   \n",
+      "4593  4594  Transportation             Truck Parts                Truck Tire   \n",
+      "4594  4595  Transportation             Truck Parts        Truck Transmission   \n",
+      "4595  4596  Transportation             Truck Parts               Truck Wheel   \n",
+      "\n",
+      "     SubSubSubCategory  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2                  NaN  \n",
+      "3                  NaN  \n",
+      "4     Aquaculture Trap  \n",
+      "...                ...  \n",
+      "4591               NaN  \n",
+      "4592               NaN  \n",
+      "4593               NaN  \n",
+      "4594               NaN  \n",
+      "4595               NaN  \n",
+      "\n",
+      "[4596 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = pd.DataFrame(df3)\n",
+    "\n",
+    "df4.replace('', pd.NA, inplace=True)\n",
+    "\n",
+    "# apply forward fill to 'Category' & 'SubCategory'\n",
+    "df4[['Category', 'SubCategory', 'SubSubCategory']] = df4[['Category', 'SubCategory', 'SubSubCategory']].ffill()\n",
+    "\n",
+    "print(df4)"
+   ]
   }
  ],
  "metadata": {
