--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -315,6 +315,58 @@
     "\n",
     "print(df4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    And then remove the title only rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Ser        Category             SubCategory           SubSubCategory  \\\n",
+      "0       5     Agriculture  Agricultural Equipment    Aquaculture Equipment   \n",
+      "1       6     Agriculture  Agricultural Equipment    Aquaculture Equipment   \n",
+      "2       7     Agriculture  Agricultural Equipment    Aquaculture Equipment   \n",
+      "3       8     Agriculture  Agricultural Equipment    Aquaculture Equipment   \n",
+      "4       9     Agriculture  Agricultural Equipment    Aquaculture Equipment   \n",
+      "..    ...             ...                     ...                      ...   \n",
+      "627  4586  Transportation             Truck Parts  Truck Electrical System   \n",
+      "628  4587  Transportation             Truck Parts  Truck Electrical System   \n",
+      "629  4588  Transportation             Truck Parts  Truck Electrical System   \n",
+      "630  4589  Transportation             Truck Parts  Truck Electrical System   \n",
+      "631  4590  Transportation             Truck Parts  Truck Electrical System   \n",
+      "\n",
+      "               SubSubSubCategory  \n",
+      "0               Aquaculture Trap  \n",
+      "1                  Fishing Float  \n",
+      "2                    Fishing Net  \n",
+      "3                   Fishing Rope  \n",
+      "4    Other Aquaculture Equipment  \n",
+      "..                           ...  \n",
+      "627             Truck Alternator  \n",
+      "628                Truck Battery  \n",
+      "629           Truck Light System  \n",
+      "630         Truck Starter System  \n",
+      "631                 Truck Switch  \n",
+      "\n",
+      "[632 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4 = df4.dropna(subset=['SubSubSubCategory'])\n",
+    "df4.reset_index(drop=True, inplace=True)\n",
+    "print(df4)"
+   ]
   }
  ],
  "metadata": {
