fixed data loss error

--- a/method 2- adobe acrobat/Excel Processing NB.ipynb
+++ b/method 2- adobe acrobat/Excel Processing NB.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame saved to InPerfectOutput.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4.to_excel('InPerfectOutput.xlsx', index=False)\n",
+    "\n",
+    "print(\"DataFrame saved to InPerfectOutput.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Wait: only 633 entries in final? maybe we should approve an empty 3sub category to prevent this\n",
+    "\n",
+    "    Lets regress back to DF3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Ser        Category             SubCategory            SubSubCategory  \\\n",
+      "0        3     Agriculture  Agricultural Equipment  Agricultural Greenhouses   \n",
+      "1        4     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "2        5     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "3        6     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "4        7     Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "...    ...             ...                     ...                       ...   \n",
+      "4589  4592  Transportation             Truck Parts            Truck Steering   \n",
+      "4590  4593  Transportation             Truck Parts          Truck Suspension   \n",
+      "4591  4594  Transportation             Truck Parts                Truck Tire   \n",
+      "4592  4595  Transportation             Truck Parts        Truck Transmission   \n",
+      "4593  4596  Transportation             Truck Parts               Truck Wheel   \n",
+      "\n",
+      "     SubSubSubCategory  \n",
+      "0                  NaN  \n",
+      "1                  NaN  \n",
+      "2     Aquaculture Trap  \n",
+      "3        Fishing Float  \n",
+      "4          Fishing Net  \n",
+      "...                ...  \n",
+      "4589               NaN  \n",
+      "4590               NaN  \n",
+      "4591               NaN  \n",
+      "4592               NaN  \n",
+      "4593               NaN  \n",
+      "\n",
+      "[4594 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df5 = pd.DataFrame(df3)\n",
+    "\n",
+    "df5.replace('', pd.NA, inplace=True)\n",
+    "\n",
+    "df5[['Category', 'SubCategory', 'SubSubCategory']] = df5[['Category', 'SubCategory', 'SubSubCategory']].ffill()\n",
+    "\n",
+    "df5 = df5.dropna(subset=['SubSubCategory'])\n",
+    "df5.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "print(df5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Back up to 4594 entries - perfect - lets export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +476,7 @@
     }
    ],
    "source": [
-    "df4.to_excel('PerfectOutput.xlsx', index=False)\n",
+    "df5.to_excel('PerfectOutput.xlsx', index=False)\n",
     "\n",
     "print(\"DataFrame saved to PerfectOutput.xlsx\")"
    ]
