db connected & run

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,21 @@
     "                        host=\"38.180.117.52\",\n",
     "                        user=\"postgres\",\n",
     "                        password=\"deerRun\",\n",
-    "                        port=\"5432\")"
+    "                        port=\"5432\")\n",
+    "cursor = con.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select * from \"Categories\" c;\n",
+    "# insert into \"Categories\" (category) values ('food');\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "cursor.execute(\"\"\"insert into \"Categories\" (category) values ('food but with py again this time')\"\"\")\n"
    ]
   }
  ],
