--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -105,6 +105,22 @@
     "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
     "cursor.execute(\"\"\"insert into \"Categories\" (category) values ('food but with py again this time')\"\"\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    now lets make a skeleton for the next step:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ser = []; Cat = []; SCat = []; SSCat = []; SSSCat = []"
+   ]
   }
  ],
  "metadata": {
