--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -115,11 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ser = []; Cat = []; SCat = []; SSCat = []; SSSCat = []"
+    "Ser = []; Cat = []; SCat = []; SSCat = []; SSSCat = []\n",
+    "\n",
+    "for i in dfp:\n",
+    "    Ser.append(dfp['Ser'])\n",
+    "    Cat.append(dfp['Category'])\n",
+    "    SCat.append(dfp['SubCategory'])\n",
+    "    SSCat.append(dfp['SubSubCategory'])\n",
+    "    SSSCat.append(dfp['SubSubSubCategory'])"
    ]
   }
  ],
