--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -128,6 +128,15 @@
     "    SSCat.append(dfp['SubSubCategory'])\n",
     "    SSSCat.append(dfp['SubSubSubCategory'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ser; # Cat; # SCat; # SSCat; # SSSCat\n"
+   ]
   }
  ],
  "metadata": {
