--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -137,6 +137,13 @@
    "source": [
     "# Ser; # Cat; # SCat; # SSCat; # SSSCat\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    & the final step is to use this to commit our data to the DB"
+   ]
   }
  ],
  "metadata": {
