skeleton for upload

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -144,6 +144,31 @@
    "source": [
     "    & the final step is to use this to commit our data to the DB"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f\n",
+      "f\n",
+      "f\n",
+      "f\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "len = dfip.size\n",
+    "\n",
+    "for i in dfp:\n",
+    "    print(\"f\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
