--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Uploading the data\n",
+    "# Uploading our stuff\n",
     "\n",
     "    First, lets import our python toolbox and the data"
    ]
