--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -1,9 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Uploading the data\n",
+    "\n",
+    "    First lets get our data from last time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": []
   }
