obtain data sets

--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -11,19 +11,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ser     Category             SubCategory         SubSubCategory  \\\n",
+      "0    5  Agriculture  Agricultural Equipment  Aquaculture Equipment   \n",
+      "1    6  Agriculture  Agricultural Equipment  Aquaculture Equipment   \n",
+      "2    7  Agriculture  Agricultural Equipment  Aquaculture Equipment   \n",
+      "3    8  Agriculture  Agricultural Equipment  Aquaculture Equipment   \n",
+      "4    9  Agriculture  Agricultural Equipment  Aquaculture Equipment   \n",
+      "\n",
+      "             SubSubSubCategory  \n",
+      "0             Aquaculture Trap  \n",
+      "1                Fishing Float  \n",
+      "2                  Fishing Net  \n",
+      "3                 Fishing Rope  \n",
+      "4  Other Aquaculture Equipment  \n"
+     ]
+    }
+   ],
+   "source": [
+    "dfip = pd.read_excel('InPerfectOutput.xlsx')\n",
+    "print(dfip.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ser     Category             SubCategory            SubSubCategory  \\\n",
+      "0    3  Agriculture  Agricultural Equipment  Agricultural Greenhouses   \n",
+      "1    4  Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "2    5  Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "3    6  Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "4    7  Agriculture  Agricultural Equipment     Aquaculture Equipment   \n",
+      "\n",
+      "  SubSubSubCategory  \n",
+      "0               NaN  \n",
+      "1               NaN  \n",
+      "2  Aquaculture Trap  \n",
+      "3     Fishing Float  \n",
+      "4       Fishing Net  \n"
+     ]
+    }
+   ],
+   "source": [
+    "dfp = pd.read_excel('PerfectOutput.xlsx')\n",
+    "print(dfp.head())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
