--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -77,6 +77,31 @@
     "dfp = pd.read_excel('PerfectOutput.xlsx')\n",
     "print(dfp.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now, lets see if we can get this to fit into the SQL schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(dfp); reshaped_data = []\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    reshaped_data.append([df.loc[i, 'Category'], df.loc[i, 'SubCategory']])\n",
+    "    reshaped_data.append([df.loc[i, 'SubCategory'], df.loc[i, 'SubSubCategory']])\n",
+    "    reshaped_data.append([df.loc[i, 'SubSubCategory'], df.loc[i, 'SubSubSubCategory']])\n",
+    "\n",
+    "reshaped_df = pd.DataFrame(reshaped_data, columns=['category', 'subcategory'])\n",
+    "\n",
+    "print(reshaped_df)"
+   ]
   }
  ],
  "metadata": {
