--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -87,9 +87,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       category               subcategory\n",
+      "0                   Agriculture    Agricultural Equipment\n",
+      "1        Agricultural Equipment  Agricultural Greenhouses\n",
+      "2      Agricultural Greenhouses                       NaN\n",
+      "3                   Agriculture    Agricultural Equipment\n",
+      "4        Agricultural Equipment     Aquaculture Equipment\n",
+      "...                         ...                       ...\n",
+      "13777               Truck Parts        Truck Transmission\n",
+      "13778        Truck Transmission                       NaN\n",
+      "13779            Transportation               Truck Parts\n",
+      "13780               Truck Parts               Truck Wheel\n",
+      "13781               Truck Wheel                       NaN\n",
+      "\n",
+      "[13782 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(dfp); reshaped_data = []\n",
     "\n",
