--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -87,27 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       category               subcategory\n",
-      "0                   Agriculture    Agricultural Equipment\n",
-      "1        Agricultural Equipment  Agricultural Greenhouses\n",
-      "2      Agricultural Greenhouses                       NaN\n",
-      "3                   Agriculture    Agricultural Equipment\n",
-      "4        Agricultural Equipment     Aquaculture Equipment\n",
-      "...                         ...                       ...\n",
-      "13777               Truck Parts        Truck Transmission\n",
-      "13778        Truck Transmission                       NaN\n",
-      "13779            Transportation               Truck Parts\n",
-      "13780               Truck Parts               Truck Wheel\n",
-      "13781               Truck Wheel                       NaN\n",
-      "\n",
-      "[13782 rows x 2 columns]\n"
+      "                    category               subcategory\n",
+      "0                Agriculture    Agricultural Equipment\n",
+      "1     Agricultural Equipment  Agricultural Greenhouses\n",
+      "2   Agricultural Greenhouses                       NaN\n",
+      "3                Agriculture    Agricultural Equipment\n",
+      "4     Agricultural Equipment     Aquaculture Equipment\n",
+      "5      Aquaculture Equipment                       NaN\n",
+      "6                Agriculture    Agricultural Equipment\n",
+      "7     Agricultural Equipment     Aquaculture Equipment\n",
+      "8      Aquaculture Equipment          Aquaculture Trap\n",
+      "9                Agriculture    Agricultural Equipment\n",
+      "10    Agricultural Equipment     Aquaculture Equipment\n",
+      "11     Aquaculture Equipment             Fishing Float\n",
+      "12               Agriculture    Agricultural Equipment\n",
+      "13    Agricultural Equipment     Aquaculture Equipment\n",
+      "14     Aquaculture Equipment               Fishing Net\n",
+      "15               Agriculture    Agricultural Equipment\n",
+      "16    Agricultural Equipment     Aquaculture Equipment\n",
+      "17     Aquaculture Equipment              Fishing Rope\n",
+      "18               Agriculture    Agricultural Equipment\n",
+      "19    Agricultural Equipment     Aquaculture Equipment\n"
      ]
     }
    ],
@@ -121,8 +128,14 @@
     "\n",
     "reshaped_df = pd.DataFrame(reshaped_data, columns=['category', 'subcategory'])\n",
     "\n",
-    "print(reshaped_df)"
+    "print(reshaped_df.head(20))\n",
+    "# print(reshaped_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
