--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -135,7 +135,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "    lets export this to a doccument so we can see what we're up against"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_df = pd.DataFrame(reshaped_data, columns=['category', 'subcategory'])\n",
+    "out_df.to_excel(\"dump.xlsx\", index=False)"
+   ]
   }
  ],
  "metadata": {
