read write test

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -136,7 +136,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    now lets make a skeleton for the next step:"
+    "    Due to a few issues, lets unit test this again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (15, 'food but with py again this time'), (16, 'unique code which will be in table')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "cursor.execute(\"\"\"insert into \"Categories\" (category) values ('unique code which will be in table')\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "print(cursor.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Looks like reading & writing works, now lets try deleting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "    Now lets make a skeleton for the next step:"
    ]
   },
   {
