--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (15, 'food but with py again this time')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (23, 'food but with py again this time')]\n"
      ]
     }
    ],
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (15, 'food but with py again this time'), (16, 'unique code which will be in table')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (23, 'food but with py again this time'), (24, 'unique code which will be in table')]\n"
      ]
     }
    ],
@@ -165,6 +165,28 @@
    "metadata": {},
    "source": [
     "    Looks like reading & writing works, now lets try deleting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (23, 'food but with py again this time')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "category_id = \"24\"; category_name = 'unique code which will be in table'\n",
+    "cursor.execute(\"\"\"DELETE FROM \"Categories\" WHERE category_id = \"\"\" + category_id)# + \"\"\" OR category = \"\"\" + category_name)# type: ignore #, (category_id, category_name))\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "print(cursor.fetchall())"
    ]
   },
   {
