--- a/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
+++ b/pdf processing/tree reprasentation/XLSK to proper tree.ipynb
@@ -141,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "out_df = pd.DataFrame(reshaped_data, columns=['category', 'subcategory'])\n",
-    "out_df.to_excel(\"dump.xlsx\", index=False)"
+    "out_df.to_excel(\"slimTree.xlsx\", index=False)"
    ]
   }
  ],
