--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,29 @@
    "source": [
     "dfp = pd.read_excel('PerfectOutput.xlsx')\n",
     "print(dfp.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   category               subcategory\n",
+      "0               Agriculture    Agricultural Equipment\n",
+      "1    Agricultural Equipment  Agricultural Greenhouses\n",
+      "2  Agricultural Greenhouses                       NaN\n",
+      "3               Agriculture    Agricultural Equipment\n",
+      "4    Agricultural Equipment     Aquaculture Equipment\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfSlim = pd.read_excel('slimTree.xlsx')\n",
+    "print(dfSlim.head())"
    ]
   },
   {
@@ -200,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
