--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -218,7 +218,32 @@
    "source": [
     "\n",
     "\n",
-    "    Now lets make a skeleton for the next step:"
+    "    Now lets make a similar version for the categroy tree:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InFailedSqlTransaction",
+     "evalue": "current transaction is aborted, commands ignored until end of transaction block\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mselect * from \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategory_Tree\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m c\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124minsert into \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategory_Tree\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m (category_id, sub_category_id) values (\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcatid\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubcatid\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m cursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mselect * from \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCategories\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m c\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\n",
+      "\u001b[1;31mInFailedSqlTransaction\u001b[0m: current transaction is aborted, commands ignored until end of transaction block\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute(\"\"\"select * from \"Category_Tree\" c\"\"\")\n",
+    "cursor.execute(\"\"\"insert into \"Category_Tree\" (category_id, sub_category_id) values (\"catid\", \"subcatid\")\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
+    "print(cursor.fetchall())"
    ]
   },
   {
@@ -227,22 +252,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ser = []; Cat = []; SCat = []; SSCat = []; SSSCat = []\n",
+    "# Ser = []; Cat = []; SCat = []; SSCat = []; SSSCat = []\n",
     "\n",
-    "for i in dfp:\n",
-    "    Ser.append(dfp['Ser'])\n",
-    "    Cat.append(dfp['Category'])\n",
-    "    SCat.append(dfp['SubCategory'])\n",
-    "    SSCat.append(dfp['SubSubCategory'])\n",
-    "    SSSCat.append(dfp['SubSubSubCategory'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# for i in dfp:\n",
+    "#     Ser.append(dfp['Ser'])\n",
+    "#     Cat.append(dfp['Category'])\n",
+    "#     SCat.append(dfp['SubCategory'])\n",
+    "#     SSCat.append(dfp['SubSubCategory'])\n",
+    "#     SSSCat.append(dfp['SubSubSubCategory'])\n",
+    "\n",
     "# Ser; # Cat; # SCat; # SSCat; # SSSCat\n"
    ]
   },
